# STM32F103ZE

./: .gitattributes  AI 时代单元测试的必要性与优势.html  AUDIO_DEMO_PROGRESS.md  AUDIO_IMPLEMENTATION_GUIDE.md  MUSIC_PLAYBACK_KNOWLEDGE.md  _tmp_weact_blob.json
CAN_INTERFACE_TEST/: CAN_TEST_GUIDE_CN.md  README.md
CAN_INTERFACE_TEST/MDK-ARM/: CAN_Test.uvoptx  CAN_Test.uvprojx
CAN_INTERFACE_TEST/USER/: main.c
ES8311_RECORD_LOOPBACK/AUDIO/: audio_record.h
ES8311_RECORD_LOOPBACK/AUDIO_RECORD/: record_audio_record.c  record_board_audio.c  record_board_audio.h  record_main.c
ES8311_RECORD_LOOPBACK/MDK-ARM/: JLinkLog.txt  (+3 more)
Gerber_STM32F103ZET6开发板单片拼板_2026-04-30A/: Drill_NPTH_Through.DRL  Drill_PTH_Through.DRL  Drill_PTH_Through_Via.DRL  FlyingProbeTesting.json  Gerber_BoardOutlineLayer.GKO  Gerber_BottomLayer.GBL  Gerber_BottomPasteMaskLayer.GBP  Gerber_BottomSilkscreenLayer.GBO  Gerber_BottomSolderMaskLayer.GBS  Gerber_DocumentLayer.GDL  Gerber_DrillDrawingLayer.GDD  Gerber_TopLayer.GTL  Gerber_TopPasteMaskLayer.GTP  Gerber_TopSilkscreenLayer.GTO  Gerber_TopSolderMaskLayer.GTS
stm32_rtthread_gcc-template/: CMakeLists.txt  STM32F103ZE.uvguix.Admin  STM32F103ZE.uvoptx  STM32F103ZE.uvprojx  stm32_rtthread_gcc-template.code-workspace  stm32f103ze_flash.ld
stm32_rtthread_gcc-template/tests/host/: CMakeLists.txt  run_all_tests.sh  run_host_tests.py  test_audio_player.c  test_board_audio_logic.c  test_common.h  test_diskio.c  test_stubs.h
stm32_rtthread_gcc-template/tests/host/stubs/: test_board_audio_stub.c  test_minimp3_stub.c  test_pff_stub.c  test_sdcard_stub.c
(+365 files in other folders)
